--- a/loan.css
+++ b/loan.css
@@ -7,8 +7,8 @@ body {
     width: 600px;
     margin: 10px auto;
     padding: 5px 20px;
-    background: #FFFFFF;
-    border: 1px solid #000000;
+    background: #C0C0C0;
+    border: 1px solid #C0C0C0;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h1 {
 }
 
 p {
-	color: blue;
+	color: purple;
 	font-weight: bold;
 	text-align: center;
 }
@@ -36,7 +36,7 @@ input {
 }
 
 #futureValue {
-    color: #000000;
+    color: #008080;
 }
 
 br {
