--- a/email_list.css
+++ b/email_list.css
@@ -1,14 +1,14 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    background-color: mistyrose;
     margin: 0 auto;
     width: 670px;
-    border: 5px solid green;
+    border: 3px solid salmon;
     padding: 0 2em 1em;
 }
 h1 {
-    color: gray;
-    margin-bottom: .5em;	
+    color: black;
+    margin-bottom: 1em;	
 }
 label {
     float: left;
@@ -16,8 +16,8 @@ label {
     text-align: right;
 }
 input {
-    margin-left: 1em;
-    margin-bottom: .5em;
+    margin-left: 4em;
+    margin-bottom: 2.5em;
 }
 input[text]{
     border-style: groove;
